[gd_scene load_steps=44 format=2]

[ext_resource path="res://Font_Text/PixelGameFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/pickups/Damage.png" type="Texture" id=2]
[ext_resource path="res://Upgrades/Upgrade_Scene/Level_Damage.gd" type="Script" id=3]
[ext_resource path="res://Upgrades/Upgrade_Scene/Upgrade_Scene.gd" type="Script" id=4]
[ext_resource path="res://Sprites/pickups/Velocidade.png" type="Texture" id=5]
[ext_resource path="res://Sprites/pickups/ShotSpeed.png" type="Texture" id=6]
[ext_resource path="res://Sprites/pickups/Escudo.png" type="Texture" id=7]
[ext_resource path="res://Upgrades/Upgrade_Scene/Level_Speed.gd" type="Script" id=8]
[ext_resource path="res://Upgrades/Upgrade_Scene/Level_Shot_Speed.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.105882, 0.105882, 0.337255, 0.690196 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 1, 0.854902, 0.184314, 1 )
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0.854902, 0.184314, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0.854902, 0.184314, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=4]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0.854902, 0.184314, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.647059, 0.172549, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0.0392157 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0.235294 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.682353, 0.737255, 0.231373, 1 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="DynamicFont" id=27]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=28]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=29]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.6, 0.6, 0.6, 0.0392157 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.6, 0.6, 0.6, 0.235294 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.258824, 0.709804, 0.439216, 1 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="DynamicFont" id=30]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=31]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=32]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.6, 0.6, 0.6, 0.0392157 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.6, 0.6, 0.6, 0.235294 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.34902, 0.258824, 0.988235, 1 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="DynamicFont" id=33]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=34]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.6, 0.6, 0.6, 0.0392157 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.6, 0.6, 0.6, 0.235294 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[node name="Upgrade_Scene" type="Node2D"]
pause_mode = 2
position = Vector2( 11, -6 )
z_index = 2
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_left = 110.0
margin_top = 77.0
margin_right = 530.0
margin_bottom = 844.0
custom_styles/panel = SubResource( 1 )

[node name="Upgrade_Box" type="Node2D" parent="."]

[node name="Panel" type="Panel" parent="Upgrade_Box"]
margin_left = 145.0
margin_top = 157.0
margin_right = 495.0
margin_bottom = 357.0
custom_styles/panel = SubResource( 2 )

[node name="Panel2" type="Panel" parent="Upgrade_Box"]
margin_left = 145.0
margin_top = 387.0
margin_right = 495.0
margin_bottom = 587.0
custom_styles/panel = SubResource( 3 )

[node name="Panel3" type="Panel" parent="Upgrade_Box"]
margin_left = 145.0
margin_top = 617.0
margin_right = 495.0
margin_bottom = 817.0
custom_styles/panel = SubResource( 4 )

[node name="Upgrade" type="Node2D" parent="."]

[node name="Damage_Box" type="Panel" parent="Upgrade"]
margin_left = 868.0
margin_top = 81.0
margin_right = 1208.0
margin_bottom = 271.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="Panel" parent="Upgrade/Damage_Box"]
margin_left = 7.0
margin_top = 5.0
margin_right = 114.0
margin_bottom = 120.0
custom_styles/panel = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="Upgrade/Damage_Box"]
position = Vector2( 60, 69 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Text" type="Node2D" parent="Upgrade/Damage_Box"]

[node name="Description" type="Label" parent="Upgrade/Damage_Box/Text"]
margin_left = 10.0
margin_top = 128.0
margin_right = 195.0
margin_bottom = 185.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Base Damage Up +1"

[node name="Name_Upgrade" type="Label" parent="Upgrade/Damage_Box/Text"]
margin_left = 122.0
margin_top = 4.0
margin_right = 330.0
margin_bottom = 61.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "The More The Better"

[node name="Level_Damage" type="Label" parent="Upgrade/Damage_Box/Text"]
margin_left = 245.0
margin_top = 166.0
margin_right = 336.0
margin_bottom = 188.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/font = SubResource( 11 )
text = "Level = "
script = ExtResource( 3 )

[node name="Damage_Button" type="Button" parent="Upgrade/Damage_Box"]
margin_right = 340.0
margin_bottom = 190.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 7 )

[node name="Speed_Box" type="Panel" parent="Upgrade"]
margin_left = 876.0
margin_top = 298.0
margin_right = 1216.0
margin_bottom = 488.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="Panel" parent="Upgrade/Speed_Box"]
margin_left = 7.0
margin_top = 5.0
margin_right = 114.0
margin_bottom = 120.0
custom_styles/panel = SubResource( 24 )

[node name="Sprite" type="Sprite" parent="Upgrade/Speed_Box"]
position = Vector2( 59, 64 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Text" type="Node2D" parent="Upgrade/Speed_Box"]

[node name="Description" type="Label" parent="Upgrade/Speed_Box/Text"]
margin_left = 10.0
margin_top = 128.0
margin_right = 182.0
margin_bottom = 150.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 27 )
text = "Base Speed Up +50
"

[node name="Name _Upgrade" type="Label" parent="Upgrade/Speed_Box/Text"]
margin_left = 166.0
margin_top = 9.0
margin_right = 289.0
margin_bottom = 33.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/font = SubResource( 28 )
text = "Barry Allan"

[node name="Level_Speed" type="Label" parent="Upgrade/Speed_Box/Text"]
margin_left = 252.0
margin_top = 169.0
margin_right = 292.0
margin_bottom = 191.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/font = SubResource( 29 )
text = "Level = "
script = ExtResource( 8 )

[node name="Speed_Button" type="Button" parent="Upgrade/Speed_Box"]
margin_right = 340.0
margin_bottom = 190.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/normal = SubResource( 13 )

[node name="ShotSpeed_Box" type="Panel" parent="Upgrade"]
margin_left = 875.0
margin_top = 533.0
margin_right = 1215.0
margin_bottom = 723.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="Panel" parent="Upgrade/ShotSpeed_Box"]
margin_left = 7.0
margin_top = 5.0
margin_right = 114.0
margin_bottom = 120.0
custom_styles/panel = SubResource( 25 )

[node name="Sprite" type="Sprite" parent="Upgrade/ShotSpeed_Box"]
position = Vector2( 61, 63 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Text" type="Node2D" parent="Upgrade/ShotSpeed_Box"]

[node name="Description" type="Label" parent="Upgrade/ShotSpeed_Box/Text"]
margin_left = 10.0
margin_top = 128.0
margin_right = 10.0
margin_bottom = 142.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = "Base Shot Speed Up -0.05
"

[node name="Name_Upgrade" type="Label" parent="Upgrade/ShotSpeed_Box/Text"]
margin_left = 166.0
margin_top = 9.0
margin_right = 278.0
margin_bottom = 31.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/font = SubResource( 31 )
text = "The Rambo"

[node name="Level_Shot_Speed" type="Label" parent="Upgrade/ShotSpeed_Box/Text"]
margin_left = 252.0
margin_top = 169.0
margin_right = 292.0
margin_bottom = 183.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/font = SubResource( 32 )
text = "Level = "
script = ExtResource( 9 )

[node name="ShotSpeed_Button" type="Button" parent="Upgrade/ShotSpeed_Box"]
margin_right = 340.0
margin_bottom = 190.0
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/normal = SubResource( 15 )

[node name="Defense_Box" type="Panel" parent="Upgrade"]
margin_left = 875.0
margin_top = 755.0
margin_right = 1215.0
margin_bottom = 945.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="Panel" parent="Upgrade/Defense_Box"]
margin_left = 7.0
margin_top = 5.0
margin_right = 114.0
margin_bottom = 120.0
custom_styles/panel = SubResource( 26 )

[node name="Sprite" type="Sprite" parent="Upgrade/Defense_Box"]
position = Vector2( 59, 71 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="Text" type="Node2D" parent="Upgrade/Defense_Box"]

[node name="Description" type="Label" parent="Upgrade/Defense_Box/Text"]
margin_left = 10.0
margin_top = 128.0
margin_right = 50.0
margin_bottom = 142.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 33 )
text = "Heart Blue +2"

[node name="Name_Upgrade" type="Label" parent="Upgrade/Defense_Box/Text"]
margin_left = 159.0
margin_top = 11.0
margin_right = 307.0
margin_bottom = 33.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 34 )
text = "The Rockzation"

[node name="DefenseButton" type="Button" parent="Upgrade/Defense_Box"]
margin_right = 340.0
margin_bottom = 190.0
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/normal = SubResource( 17 )

[node name="Level_Upgrade_Label" type="Label" parent="."]
margin_left = 190.0
margin_top = 90.0
margin_right = 448.0
margin_bottom = 149.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "LEVEL UPGRADE!!
SELECT ONE"
align = 1

[connection signal="pressed" from="Upgrade/Damage_Box/Damage_Button" to="." method="_on_Damage_Button_pressed"]
[connection signal="pressed" from="Upgrade/Speed_Box/Speed_Button" to="." method="_on_Speed_Button_pressed"]
[connection signal="pressed" from="Upgrade/ShotSpeed_Box/ShotSpeed_Button" to="." method="_on_ShotSpeed_Button_pressed"]
[connection signal="pressed" from="Upgrade/Defense_Box/DefenseButton" to="." method="_on_DefenseButton_pressed"]
